--- a/ShopLiveDemo/Base.lproj/Main.storyboard
+++ b/ShopLiveDemo/Base.lproj/Main.storyboard
@@ -21,10 +21,10 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uuy-ay-HpQ">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="520"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="525.5"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="asE-Mc-n3H">
-                                                <rect key="frame" x="19" y="20" width="337.5" height="501"/>
+                                                <rect key="frame" x="19" y="20" width="337.5" height="506"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="UMQ-Vh-ewV" userLabel="Key Settings">
                                                         <rect key="frame" x="0.0" y="0.0" width="337.5" height="147.5"/>
@@ -93,7 +93,7 @@
                                                         </constraints>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="kWb-cI-2J3" userLabel="Sound Policy">
-                                                        <rect key="frame" x="0.0" y="157.5" width="337.5" height="112.5"/>
+                                                        <rect key="frame" x="0.0" y="157.5" width="337.5" height="66.5"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sound Policy Settings" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GtG-af-YdU">
                                                                 <rect key="frame" x="0.0" y="0.0" width="337.5" height="20.5"/>
@@ -132,8 +132,8 @@
                                                                     <constraint firstItem="aBw-42-Elj" firstAttribute="top" secondItem="UtE-lq-7Bx" secondAttribute="top" id="wwK-4P-Bjg"/>
                                                                 </constraints>
                                                             </view>
-                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mPP-3g-JcL">
-                                                                <rect key="frame" x="0.0" y="71.5" width="337.5" height="41"/>
+                                                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mPP-3g-JcL">
+                                                                <rect key="frame" x="0.0" y="66.5" width="337.5" height="41"/>
                                                                 <subviews>
                                                                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="3el-yo-Eyn">
                                                                         <rect key="frame" x="0.0" y="0.0" width="51" height="41"/>
@@ -165,8 +165,41 @@
                                                             </view>
                                                         </subviews>
                                                     </stackView>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tgf-XD-8xL">
+                                                        <rect key="frame" x="0.0" y="234" width="337.5" height="41"/>
+                                                        <subviews>
+                                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="57y-ru-fm8">
+                                                                <rect key="frame" x="0.0" y="0.0" width="51" height="41"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="width" constant="49" id="EOW-RT-cs1"/>
+                                                                </constraints>
+                                                                <connections>
+                                                                    <action selector="switchActionWithSwItem:" destination="BYZ-38-t0r" eventType="valueChanged" id="ecE-jS-qor"/>
+                                                                </connections>
+                                                            </switch>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="foT-22-iTK">
+                                                                <rect key="frame" x="68" y="0.0" width="269.5" height="41"/>
+                                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <string key="text">공유하기 클릭시 
+기본 ShareSheet 사용함</string>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                        </subviews>
+                                                        <constraints>
+                                                            <constraint firstAttribute="trailing" secondItem="foT-22-iTK" secondAttribute="trailing" id="1Jm-ER-5wi"/>
+                                                            <constraint firstItem="57y-ru-fm8" firstAttribute="leading" secondItem="tgf-XD-8xL" secondAttribute="leading" id="2Zd-Ro-ad7"/>
+                                                            <constraint firstItem="foT-22-iTK" firstAttribute="top" secondItem="tgf-XD-8xL" secondAttribute="top" id="2wz-jo-a2H"/>
+                                                            <constraint firstAttribute="bottom" secondItem="57y-ru-fm8" secondAttribute="bottom" id="4XW-r0-d7f"/>
+                                                            <constraint firstItem="foT-22-iTK" firstAttribute="leading" secondItem="57y-ru-fm8" secondAttribute="trailing" constant="19" id="Mpa-yt-qVi"/>
+                                                            <constraint firstItem="57y-ru-fm8" firstAttribute="top" secondItem="tgf-XD-8xL" secondAttribute="top" id="Y0M-S1-O2R"/>
+                                                            <constraint firstAttribute="height" constant="41" id="c6X-i6-gvP"/>
+                                                            <constraint firstAttribute="bottom" secondItem="foT-22-iTK" secondAttribute="bottom" id="kl8-8d-Ald"/>
+                                                        </constraints>
+                                                    </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wst-Tj-vig" userLabel="PIP switch">
-                                                        <rect key="frame" x="0.0" y="280" width="337.5" height="31"/>
+                                                        <rect key="frame" x="0.0" y="285" width="337.5" height="31"/>
                                                         <subviews>
                                                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="vgw-ae-1EG">
                                                                 <rect key="frame" x="0.0" y="0.0" width="51" height="31"/>
@@ -196,7 +229,7 @@
                                                         </constraints>
                                                     </view>
                                                     <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="bzb-9b-Jsh">
-                                                        <rect key="frame" x="0.0" y="316" width="337.5" height="5"/>
+                                                        <rect key="frame" x="0.0" y="321" width="337.5" height="5"/>
                                                         <subviews>
                                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="pip custom size (0.1 ~ 1.0)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mly-Ko-yMO">
                                                                 <rect key="frame" x="0.0" y="0.0" width="337.5" height="0.0"/>
@@ -214,7 +247,7 @@
                                                         </subviews>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Q2w-5t-Lw0" userLabel="Sign In">
-                                                        <rect key="frame" x="0.0" y="321" width="337.5" height="31"/>
+                                                        <rect key="frame" x="0.0" y="326" width="337.5" height="31"/>
                                                         <subviews>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0Ov-Xj-QCU">
                                                                 <rect key="frame" x="0.0" y="0.0" width="337.5" height="31"/>
@@ -280,7 +313,7 @@
                                                         </subviews>
                                                     </stackView>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hOg-r2-dAN" userLabel="Log switch">
-                                                        <rect key="frame" x="0.0" y="362" width="337.5" height="31"/>
+                                                        <rect key="frame" x="0.0" y="367" width="337.5" height="31"/>
                                                         <subviews>
                                                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Go8-yM-bre">
                                                                 <rect key="frame" x="0.0" y="0.0" width="51" height="31"/>
@@ -310,7 +343,7 @@
                                                         </constraints>
                                                     </view>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="EMD-nB-WtB" userLabel="Buttons Functional">
-                                                        <rect key="frame" x="0.0" y="403" width="337.5" height="98"/>
+                                                        <rect key="frame" x="0.0" y="408" width="337.5" height="98"/>
                                                         <subviews>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vhS-hG-jXK">
                                                                 <rect key="frame" x="0.0" y="0.0" width="337.5" height="44"/>
@@ -394,6 +427,7 @@
                         <outlet property="swKeepPlayUnplugged" destination="rAZ-TT-NKD" id="l0r-Sl-Gft"/>
                         <outlet property="swLog" destination="Go8-yM-bre" id="bvm-Rn-tqd"/>
                         <outlet property="swPipSetting" destination="vgw-ae-1EG" id="D4D-dF-ixI"/>
+                        <outlet property="swShare" destination="57y-ru-fm8" id="bz9-S2-Wsa"/>
                         <outlet property="swSignIn" destination="9oV-aS-GrK" id="eeq-fs-MPR"/>
                         <outlet property="userId" destination="Nfr-wy-Qz2" id="oVW-o1-mvd"/>
                         <outlet property="userName" destination="XQv-ia-Xxq" id="fjX-qb-TEF"/>
