--- a/ShopLiveDemo/Base.lproj/Main.storyboard
+++ b/ShopLiveDemo/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Kzg-ks-RMu">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Kzg-ks-RMu">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -21,10 +21,10 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uuy-ay-HpQ">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="525.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="568"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="asE-Mc-n3H">
-                                                <rect key="frame" x="19" y="20" width="337.5" height="506"/>
+                                                <rect key="frame" x="19" y="20" width="337.5" height="547"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="UMQ-Vh-ewV" userLabel="Key Settings">
                                                         <rect key="frame" x="0.0" y="0.0" width="337.5" height="147.5"/>
@@ -342,8 +342,38 @@
                                                             <constraint firstItem="s2T-IL-tya" firstAttribute="leading" secondItem="Go8-yM-bre" secondAttribute="trailing" constant="19" id="xl5-c0-j3F"/>
                                                         </constraints>
                                                     </view>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fDb-Jo-vL5" userLabel="Log switch">
+                                                        <rect key="frame" x="0.0" y="408" width="337.5" height="31"/>
+                                                        <subviews>
+                                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="UYh-Lw-Ate">
+                                                                <rect key="frame" x="0.0" y="0.0" width="51" height="31"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="width" constant="49" id="R5N-Zw-NFu"/>
+                                                                </constraints>
+                                                                <connections>
+                                                                    <action selector="switchActionWithSwItem:" destination="BYZ-38-t0r" eventType="valueChanged" id="GJw-Os-O4o"/>
+                                                                </connections>
+                                                            </switch>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="웹로그 표시" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EeQ-AB-UXi">
+                                                                <rect key="frame" x="68" y="0.0" width="269.5" height="31"/>
+                                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                        </subviews>
+                                                        <constraints>
+                                                            <constraint firstAttribute="trailing" secondItem="EeQ-AB-UXi" secondAttribute="trailing" id="3RO-6i-qDp"/>
+                                                            <constraint firstItem="UYh-Lw-Ate" firstAttribute="top" secondItem="fDb-Jo-vL5" secondAttribute="top" id="DhO-AQ-t8x"/>
+                                                            <constraint firstAttribute="bottom" secondItem="UYh-Lw-Ate" secondAttribute="bottom" id="Lmx-O1-Iwc"/>
+                                                            <constraint firstAttribute="bottom" secondItem="EeQ-AB-UXi" secondAttribute="bottom" id="SYk-2R-ub6"/>
+                                                            <constraint firstItem="UYh-Lw-Ate" firstAttribute="leading" secondItem="fDb-Jo-vL5" secondAttribute="leading" id="Ukj-Bk-USP"/>
+                                                            <constraint firstItem="EeQ-AB-UXi" firstAttribute="leading" secondItem="UYh-Lw-Ate" secondAttribute="trailing" constant="19" id="aRp-5s-8eu"/>
+                                                            <constraint firstItem="EeQ-AB-UXi" firstAttribute="top" secondItem="fDb-Jo-vL5" secondAttribute="top" id="zFv-PR-y36"/>
+                                                        </constraints>
+                                                    </view>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="EMD-nB-WtB" userLabel="Buttons Functional">
-                                                        <rect key="frame" x="0.0" y="408" width="337.5" height="98"/>
+                                                        <rect key="frame" x="0.0" y="449" width="337.5" height="98"/>
                                                         <subviews>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vhS-hG-jXK">
                                                                 <rect key="frame" x="0.0" y="0.0" width="337.5" height="44"/>
@@ -429,6 +459,7 @@
                         <outlet property="swPipSetting" destination="vgw-ae-1EG" id="D4D-dF-ixI"/>
                         <outlet property="swShare" destination="57y-ru-fm8" id="bz9-S2-Wsa"/>
                         <outlet property="swSignIn" destination="9oV-aS-GrK" id="eeq-fs-MPR"/>
+                        <outlet property="swWebLog" destination="UYh-Lw-Ate" id="qeu-1g-ufq"/>
                         <outlet property="userId" destination="Nfr-wy-Qz2" id="oVW-o1-mvd"/>
                         <outlet property="userName" destination="XQv-ia-Xxq" id="fjX-qb-TEF"/>
                     </connections>
