--- a/ShopLiveDemo/Base.lproj/Main.storyboard
+++ b/ShopLiveDemo/Base.lproj/Main.storyboard
@@ -21,10 +21,10 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uuy-ay-HpQ">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="568"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="624"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="asE-Mc-n3H">
-                                                <rect key="frame" x="19" y="20" width="337.5" height="547"/>
+                                                <rect key="frame" x="19" y="20" width="337.5" height="601"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="UMQ-Vh-ewV" userLabel="Key Settings">
                                                         <rect key="frame" x="0.0" y="0.0" width="337.5" height="147.5"/>
@@ -373,10 +373,23 @@
                                                         </constraints>
                                                     </view>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="EMD-nB-WtB" userLabel="Buttons Functional">
-                                                        <rect key="frame" x="0.0" y="449" width="337.5" height="98"/>
+                                                        <rect key="frame" x="0.0" y="449" width="337.5" height="152"/>
                                                         <subviews>
-                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vhS-hG-jXK">
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hM5-ae-KQX">
                                                                 <rect key="frame" x="0.0" y="0.0" width="337.5" height="44"/>
+                                                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="height" constant="44" id="EpU-LP-sjK"/>
+                                                                </constraints>
+                                                                <state key="normal" title="쿠폰 콜백 설정">
+                                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                </state>
+                                                                <connections>
+                                                                    <action selector="didTouchCouponCallbackSetting" destination="BYZ-38-t0r" eventType="touchUpInside" id="y3w-1V-xbY"/>
+                                                                </connections>
+                                                            </button>
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vhS-hG-jXK">
+                                                                <rect key="frame" x="0.0" y="54" width="337.5" height="44"/>
                                                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="44" id="kqL-Hx-kAE"/>
@@ -389,7 +402,7 @@
                                                                 </connections>
                                                             </button>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5e5-6o-uv4">
-                                                                <rect key="frame" x="0.0" y="54" width="337.5" height="44"/>
+                                                                <rect key="frame" x="0.0" y="108" width="337.5" height="44"/>
                                                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="44" id="10x-fE-FH2"/>
